--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,12 @@
+
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100 vw;
+    background-color: aqua;
 }
 
 h1 {
@@ -22,6 +25,7 @@ text-align: center;
     align-items: center;
     text-align: center;
     width: 50%;
+    background-color: white;
  }
 
  #answer-buttons {
@@ -49,4 +53,14 @@ text-align: center;
 #time-container {
     display: flex;
     justify-content: center;
+}
+
+#question {
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#startquiz {
+    margin-bottom: 20px;
 }
